feat: separate public and private api for vc
